Major commit-bump

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,41 +1,52 @@
 
-    <footer class="bg-gagnef-grayblue-500">
-      <div class="container px-6 py-10 mx-auto">
-          <div class="lg:flex">
-              <div class="mt-6 lg:mt-0 lg:flex-1">
-                  <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 text-white ">
-                    <div>
-                      <h3 class="uppercase">Kontakt</h3>
-                      <div class="block">
-                        <!--<a href="mailto:example.com" class="inline-block mt-2 text-sm text-gray-600 hover:underline">kontakt@gagnefbrewing.se</a>-->
-                      </div>
-                      <div class="block">
-                        <p class="inline-block mt-2 text-sm">Gagnef Brewing AB</p>
-                      </div>
-                      <div class="block">
-                        <p class="inline-block mt-0 text-sm">Hedvägen 13</p>
-                      </div>
-                      <div class="block">
-                        <p class="inline-block mt-0 text-sm">785 42 Mockfjärd</p>
-                      </div>
-                    </div>
+    <footer class="bg-white relative  overflow-hidden">
+      <div class="flex flex-col items-center sm:flex-row sm:justify-around p-10 bg-white space-y-5 sm:space-y-0">
+        <a href="//fb.me/gagnefbrewing" target="_blank">
+          <button class="flex items-center p-2 hover:underline underline-offset-8 rounded-xl">
+            <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/facebook.svg" alt="like gagnef brewing on facebook" />
+            <p class="text-lg sm:text-sm md:text-lg">Gilla oss på Facebook</p>
+          </button>
+        </a>
+        <div class="relative">
+          <a href="//instagram.com/gagnefbrewing" target="_blank" class="hover:underline underline-offset-8">
+            <button class="flex items-center p-2 rounded-xl">
+              <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/instagram.svg" alt="follow gagnef brewing on instagram" />
+              <p class="text-lg sm:text-sm md:text-lg">Följ oss på Instagram</p>
+            </button>
+    
+            <picture>
+              <source srcset="/assets/images/humla_kryper.webp" type="image/webp">
+              <img class="absolute h-[40px] scale-x-[-1] right-[-20px] top-[20px]" src="/assets/images/humla_kryper.png">
+            </picture>
+          </a>
+        </div>
+        <a href="//untappd.com/GagnefBrewing" target="_blank">
+          <button class="flex items-center p-2 hover:underline underline-offset-8 rounded-xl">
+            <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd" />
+            <p class="text-lg sm:text-sm md:text-lg">Checka in på Untappd</p>
+          </button>
+        </a>
+      </div>
 
-                    <div>
-                      <div class="block">
-                        <a href="/cookies-privacy" class="inline-block text-sm hover:underline">Cookies & Privacy Policy</a>
-                      </div>
-                      <div class="flex space-x-4 my-6">
-                        <a href="//untappd.com/GagnefBrewing" target="_blank" class="items-center mt-2 text-sm hover:underline">
-                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/untappd.svg" alt="visit gagnef brewing on untappd"/>
-                        </a>
-
-                        <a href="//instagram.com/gagnefbrewing" target="_blank" class="mt-2 text-sm hover:underline">
-                          <img class="w-10 h-10 rounded-xl" src="/assets/images/socials/instagram.svg" alt="visit gagnef brewing on instagram" />
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-              </div>
+      <div class="flex justify-center items-center px-6 py-10">
+        <picture>
+          <source srcset="/assets/images/maskot.webp" type="image/webp">
+          <img class="h-[150px] sm:h-[150px]" src="/assets/images/maskot.png">
+        </picture>
+        <div class="min-w-[150px]">
+          <h3 class="uppercase">Kontakt</h3>
+          <div class="block">
+            <a href="mailto:info@gagnefbrewing.se" class="inline-block mt-2 text-sm hover:underline underline-offset-8">info@gagnefbrewing.se</a>
           </div>
+          <div class="block">
+            <p class="inline-block mt-2 text-sm">Gagnef Brewing AB</p>
+          </div>
+          <div class="block">
+            <p class="inline-block mt-0 text-sm">Hedvägen 11</p>
+          </div>
+          <div class="block">
+            <p class="inline-block mt-0 text-sm">785 42 Mockfjärd</p>
+          </div>
+        </div>
       </div>
   </footer>
