--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,12 +4,12 @@
         <div class="flex items-center justify-center sm:justify-between">
           <div>
             <a href="/">
-              <img src="/assets/images/logo.png" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1]"/>
+              <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1]"/>
             </a>
           </div>
         </div>
 
-        <div class="flex flex-col text-gray-900 capitalize sm:px-16 sm:mx-4 sm:flex-row sm:items-center">
+        <div class="flex text-black space-x-5 items-center justify-center text-xl">
           {% for page_data in site.data.page_data %}
             {% for pg in page_data %}
               {%
