--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@
     {{ content }}
   </body>
 
+  {% include footer.html %}
   {% include molecules/age-check.html %}
   {% include molecules/cookie-consent.html %}
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
