--- a/_includes/components/menu-list-item.html
+++ b/_includes/components/menu-list-item.html
@@ -1,3 +1,3 @@
-<a href="{{ include.url }}" class="mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:text-gray-500">
+<a href="{{ include.url }}" class="mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:underline hover:underline-offset-8">
   {{ include.text }}
 </a>
