--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 {% if page.title %}
-  {% assign title = page.title | prepend: " - " | prepend: site.title %}
+  {% assign title = page.title | append: " - " | append: site.title %}
 {% else %}
   {% assign title = site.title %}
 {% endif %}
@@ -28,12 +28,19 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ url }}" />
   <meta property="og:image" content="{{ og_image }}" />
+  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:height" content="630"/>
   <meta property="og:locale" content="sv_SE" />
 
   <link rel="DNS-prefetch" href="//fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="manifest" href="/assets/site.webmanifest">
 
   <script>
     function createCookie(name,value,days) {
