--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ url }}" />
   <meta property="og:image" content="{{ og_image }}" />
+  <meta property="og:image:secure_url" content="{{ og_image }}" />
+  <meta property="og:image:type" content="image/jpeg" /> 
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
   <meta property="og:locale" content="sv_SE" />
