--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,8 @@
   <meta property="og:description" content="{{ site.description }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ url }}" />
-  <meta property="og:image" content="{{ og_image }}" />
-  <meta property="og:image:secure_url" content="{{ og_image }}" />
+  <meta property="og:image" content="{{ site.url }}{{ og_image }}" />
+  <meta property="og:image:secure_url" content="{{ site.url }}{{ og_image }}" />
   <meta property="og:image:type" content="image/jpeg" /> 
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
