--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,15 +1,14 @@
-<nav class="bg-white">
+<nav>
   <div class="container p-4 mx-auto sm:flex sm:justify-between sm:items-center">
       <div class="sm:flex sm:items-center">
         <div class="flex items-center justify-center sm:justify-between">
           <div>
             <a href="/">
-              <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1]"/>
+              <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1] {{ include.invert }}"/>
             </a>
           </div>
         </div>
-
-        <div class="flex text-black space-x-5 items-center justify-center text-xl">
+        <div class="flex text-black space-x-5 items-center justify-center text-xl {{ include.invert }}">
           {% for page_data in site.data.page_data %}
             {% for pg in page_data %}
               {%
