--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 
     <footer class="bg-white relative  overflow-hidden">
       <div class="flex flex-col items-center sm:flex-row sm:justify-around p-10 bg-white space-y-5 sm:space-y-0">
-        <!--<a href="//fb.me/gagnefbrewing" target="_blank">
+        <a href="//fb.me/gagnefbrewing" target="_blank">
           <button class="flex items-center p-2 hover:underline underline-offset-8 rounded-xl">
             <img class="w-10 h-10 rounded-xl mr-2" src="/assets/images/socials/facebook.svg" alt="like gagnef brewing on facebook" />
             <p class="text-lg sm:text-sm md:text-lg">Gilla oss på Facebook</p>
           </button>
-        </a>-->
+        </a>
         <div class="relative">
           <a href="//instagram.com/gagnefbrewing" target="_blank" class="hover:underline underline-offset-8">
             <button class="flex items-center p-2 rounded-xl">
