--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       <div class="flex justify-center items-center px-6 py-10">
         <picture>
           <source srcset="/assets/images/maskot.webp" type="image/webp">
-          <img class="h-[150px] sm:h-[150px]" src="/assets/images/maskot.png">
+          <img class="h-[150px] sm:h-[150px] pointer-events-none" src="/assets/images/maskot.png">
         </picture>
         <div class="min-w-[150px]">
           <h3 class="uppercase">Kontakt</h3>
