--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
     
             <picture>
               <source srcset="/assets/images/humla_kryper.webp" type="image/webp">
-              <img class="absolute h-[40px] scale-x-[-1] right-[-20px] top-[20px]" src="/assets/images/humla_kryper.png">
+              <img class="absolute h-[40px] scale-x-[-1] right-[-20px] top-[20px]" alt="" src="/assets/images/humla_kryper.png">
             </picture>
           </a>
         </div>
@@ -31,10 +31,10 @@
       <div class="flex justify-center items-center px-6 py-10">
         <picture>
           <source srcset="/assets/images/maskot.webp" type="image/webp">
-          <img class="h-[150px] sm:h-[150px]" src="/assets/images/maskot.png">
+          <img class="h-[150px] w-[102px]" alt="maskot" src="/assets/images/maskot.png">
         </picture>
         <div class="min-w-[150px]">
-          <h3 class="uppercase">Kontakt</h3>
+          <p class="uppercase">Kontakt</p>
           <div class="block">
             <a href="mailto:info@gagnefbrewing.se" class="inline-block mt-2 text-sm hover:underline underline-offset-8">info@gagnefbrewing.se</a>
           </div>
