--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,7 +4,7 @@
         <div class="flex items-center justify-center sm:justify-between">
           <div>
             <a href="/">
-              <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 my-4 transition duration-200 transform hover:scale-[1.1] {{ include.invert }}"/>
+              <img src="/assets/images/logo.svg" alt="gagnef brewing logo" class="h-24 w-24 my-4 transition duration-200 transform hover:scale-[1.1] {{ include.invert }}"/>
             </a>
           </div>
         </div>
