--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@
   font-style: normal;
   font-weight: 900;
   src: url(/assets//fonts/Simvoni-Bold.ttf) format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +18,7 @@
   font-style: normal;
   font-weight: 700;
   src: url(/assets/fonts/Simvoni-Bold.ttf) format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +26,7 @@
   font-style: normal;
   font-weight: 500;
   src: url(/assets/fonts/Simvoni.ttf) format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -31,6 +34,7 @@
   font-style: normal;
   font-weight: 500;
   src: url(/assets/fonts/Bittersweet-Regular.otf) format("opentype");
+  font-display: swap;
 }
 
 .preview_fullscreen {
