Tweaks from web.dev

--- a/_includes/components/menu-list-item.html
+++ b/_includes/components/menu-list-item.html
@@ -4,6 +4,4 @@
   {% assign active = "" %}
 {% endif %}
 
-<a href="{{ include.url }}" class="{{ active }} mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:underline underline-offset-8">
-  {{ include.text }}
-</a>
+<a href="{{ include.url }}" class="{{ active }} mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:underline underline-offset-8">{{ include.text }}</a>
