--- a/_includes/molecules/age-check.html
+++ b/_includes/molecules/age-check.html
@@ -11,8 +11,8 @@
       <p class="mt-2 text-xs italic text-gray-600">Genom att <span id="accept-cookies" class="hover:underline cursor-pointer font-semibold">tillåta kakor</span> sparas ditt val.</p>
       
       <div class="flex justify-between mt-4">
-        <button id="age-ok" class="text-l font-medium">Jag är över 20 år</button>
-        <a href="//leoslekland.se/" id="age-fail" class="text-l">Jag är ett barn</a>
+        <button id="age-ok" class="text-l font-medium hover:underline underline-offset-8">Jag är över 20 år</button>
+        <a href="//leoslekland.se/" id="age-fail" class="text-l hover:underline underline-offset-8">Jag är ett barn</a>
       </div>
     </div>
   </div>
