More tweaks to web.dev

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,10 +14,7 @@
               <p class="text-lg sm:text-sm md:text-lg">Följ oss på Instagram</p>
             </button>
     
-            <picture>
-              <source srcset="/assets/images/humla_kryper.webp" type="image/webp">
-              <img class="absolute h-[40px] scale-x-[-1] right-[-20px] top-[20px]" alt="" src="/assets/images/humla_kryper.png">
-            </picture>
+            <img class="absolute h-[40px] w-[57px] scale-x-[-1] right-[-20px] top-[20px]" alt="" src="/assets/images/humla_kryper.webp">
           </a>
         </div>
         <a href="//untappd.com/GagnefBrewing" target="_blank">
@@ -29,10 +26,7 @@
       </div>
 
       <div class="flex justify-center items-center px-6 py-10">
-        <picture>
-          <source srcset="/assets/images/maskot.webp" type="image/webp">
-          <img class="h-[150px] w-[102px]" alt="maskot" src="/assets/images/maskot.png">
-        </picture>
+        <img class="h-[150px] w-[102px]" alt="maskot" src="/assets/images/maskot.webp">
         <div class="min-w-[150px]">
           <p class="uppercase">Kontakt</p>
           <div class="block">
