--- a/_includes/molecules/beer-list.html
+++ b/_includes/molecules/beer-list.html
@@ -23,7 +23,7 @@
                 <p class="text-sm">Kommer snart</p>
               </div>
               {% endif %}
-              <p class="text-xl underline underline-offset-8 mt-5">Läs mer om ölen</p>
+              <p class="text-xl underline underline-offset-8 mt-5">Läs mer om {{ beer.name }}</p>
             </div>
           </a>
         </div>
