--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,10 +34,10 @@
   <meta property="og:image:height" content="630"/>
   <meta property="og:locale" content="sv_SE" />
 
-  <link rel="DNS-prefetch" href="//fonts.googleapis.com"/>
+  <!--<link rel="DNS-prefetch" href="//fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="stylesheet">-->
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
