--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,4 +10,9 @@
   {% include molecules/age-check.html %}
   {% include molecules/cookie-consent.html %}
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script>
+    document.querySelector("#scroll-icon").addEventListener("click", function() {
+      window.scrollTo({ top: 400, behavior: 'smooth' })
+    });
+  </script>
 </html>
