--- a/_layouts/beer.html
+++ b/_layouts/beer.html
@@ -2,61 +2,74 @@
 layout: default
 ---
 
-<div class="container flex flex-col px-6 py-10 mx-auto space-y-6 md:py-16 md:flex-row md:items-center">
-  <div class="flex items-center justify-center w-full lg:w-1/2">
-    <picture>
-      <source srcset="{{ page.image }}.webp" type="image/webp">
-      <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ page.image }}.png">
-    </picture>
-  </div>
+<div class="container">
+  <div class="flex flex-col px-6 py-10 mx-auto space-y-6 md:py-16 md:flex-row md:items-center">
+    <div class="flex items-center justify-center w-full lg:w-1/2">
+      <picture>
+        <source srcset="{{ page.image }}.webp" type="image/webp">
+        <img class="w-full lg:max-w-2xl rounded-md max-h-screen p-16" src="{{ page.image }}.png">
+      </picture>
+    </div>
 
-  <div class="w-full lg:w-1/2">
-      <div class="lg:max-w-lg">
-        <h1 class="text-4xl font-semibold tracking-wide text-gray-800 lg:text-6xl">{{ page.name }}</h1>
-        <p class="mt-2 text-gray-600">{{ page.description }}</p>
+    <div class="w-full lg:w-1/2">
+        <div class="lg:max-w-lg">
+          <h1 class="text-4xl font-semibold tracking-wide text-gray-800 lg:text-6xl">{{ page.name }}</h1>
+          <p class="mt-2 text-gray-600">{{ page.description }}</p>
 
-        {% if page.coming_soon == true %}
-          {%
-            include components/coming-soon.html
-            extra_info = page.coming_soon_info
-          %}
-        {% endif %}
+          {% if page.coming_soon == true %}
+            {%
+              include components/coming-soon.html
+              extra_info = page.coming_soon_info
+            %}
+          {% endif %}
 
-        <div class="grid gap-6 mt-8 sm:grid-cols-2">
-            <div class="flex items-center text-gray-800 -px-3">
-                <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
-                </svg>
-
-                <span class="mx-3">{{ page.type }}</span>
+          {% if page.coming_soon != true and page.SB_number %}
+            <div class="block mt-5 bg-gagnef-moss-500 p-5 max-w-[350px] rounded-2xl text-center text-white">
+              {% if page.release_info %}
+                <h3 class="text-xl text-left">{{ page.release_info}}</h3>
+                <hr class="opacity-50 mb-5"/>
+              {% endif %}
+              <a href="https://www.systembolaget.se/{{ page.SB_number}}" target="_blank">
+                <h3 class="text-2xl hover:underline hover:underline-offset-8">Beställ på systembolaget.se</h3>
+              </a>
             </div>
+          {% endif %}
 
-            <div class="flex items-center text-gray-800 -px-3">
-                <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4" />
-                </svg>
+          <div class="grid gap-6 mt-8 sm:grid-cols-2">
+              <div class="flex items-center text-gray-800 -px-3">
+                  <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+                  </svg>
 
-                <span class="mx-3">{{ page.size }}</span>
-            </div>
+                  <span class="mx-3">{{ page.type }}</span>
+              </div>
 
-            <div class="flex items-center text-gray-800 -px-3">
-                <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 14l6-6m-5.5.5h.01m4.99 5h.01M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16l3.5-2 3.5 2 3.5-2 3.5 2zM10 8.5a.5.5 0 11-1 0 .5.5 0 011 0zm5 5a.5.5 0 11-1 0 .5.5 0 011 0z" />
-                </svg>
+              <div class="flex items-center text-gray-800 -px-3">
+                  <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4" />
+                  </svg>
 
-                <span class="mx-3">{{ page.classification }} {{ page.alcohol }}</span>
-            </div>
+                  <span class="mx-3">{{ page.size }}</span>
+              </div>
 
-            <div class="flex items-center text-gray-800 -px-3">
-                <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
-                </svg>
+              <div class="flex items-center text-gray-800 -px-3">
+                  <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 14l6-6m-5.5.5h.01m4.99 5h.01M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16l3.5-2 3.5 2 3.5-2 3.5 2zM10 8.5a.5.5 0 11-1 0 .5.5 0 011 0zm5 5a.5.5 0 11-1 0 .5.5 0 011 0z" />
+                  </svg>
 
-                <span class="mx-3">{{ page.container }}</span>
-            </div>
+                  <span class="mx-3">{{ page.classification }} {{ page.alcohol }}</span>
+              </div>
+
+              <div class="flex items-center text-gray-800 -px-3">
+                  <svg class="w-6 h-6 mx-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+                  </svg>
+
+                  <span class="mx-3">{{ page.container }}</span>
+              </div>
+          </div>
         </div>
-      </div>
-      
+    </div>
   </div>
 </div>
 
