--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,7 +8,7 @@
             </a>
           </div>
         </div>
-        <div class="flex text-black space-x-5 items-center justify-center text-xl {{ include.invert }}">
+        <div class="flex flex-col md:flex-row text-black space-x-5 items-center justify-center text-xl {{ include.invert }}">
           {% for page_data in site.data.page_data %}
             {% assign pd = page_data[1] %}
             {%
@@ -17,6 +17,12 @@
               text = pd.title
             %}
           {% endfor %}
+          {%
+            include components/menu-list-item.html
+            url = "https://www.systembolaget.se/sortiment/?q=gagnef%20brewing"
+            text = "Beställ på Systembolaget"
+            target = "_blank"
+          %}
         </div>
       </div>
   </div>
