--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,7 +22,7 @@
           <div class="mt-2 md:mt-0 p-2">
             {%
               include components/menu-list-item.html
-              url = "https://www.systembolaget.se/sortiment/?q=gagnef%20brewing"
+              url = "https://www.systembolaget.se/sortiment/?q=Gagnef%20Brewing"
               text = "Beställ på Systembolaget"
               target = "_blank"
             %}
