--- a/_layouts/beer.html
+++ b/_layouts/beer.html
@@ -30,15 +30,17 @@ layout: default
             %}
           {% endif %}
 
-          {% if page.coming_soon != true and page.SB_number %}
+          {% if page.coming_soon != true %}
             <div class="block mt-5 bg-gagnef-moss-500 p-5 max-w-[350px] rounded-2xl text-center text-white">
               {% if page.release_info %}
                 <h3 class="text-xl text-left">{{ page.release_info}}</h3>
-                <hr class="opacity-50 mb-5"/>
               {% endif %}
-              <a href="https://www.systembolaget.se/{{ page.SB_number}}" target="_blank">
-                <h3 class="text-2xl hover:underline hover:underline-offset-8">Beställ på systembolaget.se</h3>
-              </a>
+              {% if page.SB_number %}
+                <hr class="opacity-50 mb-5"/>
+                <a href="https://www.systembolaget.se/{{ page.SB_number}}" target="_blank">
+                  <h3 class="text-2xl hover:underline hover:underline-offset-8">Beställ på systembolaget.se</h3>
+                </a>
+              {% endif %}
             </div>
           {% endif %}
 
