--- a/_includes/molecules/beer-list.html
+++ b/_includes/molecules/beer-list.html
@@ -23,6 +23,11 @@
                 <p class="text-sm">{% if beer.coming_soon_info %} {{ beer.coming_soon_info }} {% else %} Kommer snart {% endif %}</p>
               </div>
               {% endif %}
+              {% if beer.release_info %}
+              <div class="mt-5 p-2 rounded-xl bg-gagnef-moss-500 text-white inline-block">
+                <p class="text-sm">{{ beer.release_info }}</p>
+              </div>
+              {% endif %}
               <p class="text-xl underline underline-offset-8 mt-5">Läs mer om {{ beer.name }}</p>
             </div>
           </a>
