Fix h1 for google crawlers

--- a/_includes/components/menu-list-item.html
+++ b/_includes/components/menu-list-item.html
@@ -1,7 +1,13 @@
 {% if page.url contains include.url %}
-  {% assign active = "underline" %}
+  {% assign active = true %}
 {% else %}
-  {% assign active = "" %}
+  {% assign active = false %}
 {% endif %}
 
-<a href="{{ include.url }}" {% if include.target %} target="{{include.target}}" {% endif %} class="{{ active }} mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:underline underline-offset-8">{{ include.text }}</a>
+<a href="{{ include.url }}" {% if include.target %} target="{{include.target}}" {% endif %} class="{% if active %} underline {% endif %}  mt-2 transition-colors duration-300 transform md:mt-0 sm:mx-4 hover:underline underline-offset-8">
+  {% if active %}
+    <h1 class="inline">{{ include.text }}</h1>
+  {% else %}
+    {{ include.text }}
+  {% endif %}
+</a>
